--- a/web/user/css/takeTestStyle.css
+++ b/web/user/css/takeTestStyle.css
@@ -16,9 +16,9 @@ label.radio input {
 
 label.radio span {
   padding:4px 10px 4px 10px;
-  border: 1px solid red;
+  border: 1px solid black;
   display: inline-block;
-  color: red;
+  color: black;
   width: auto;
   text-align: center;
   border-radius: 3px;
@@ -27,8 +27,8 @@ label.radio span {
 }
 
 label.radio input:checked + span {
-  border-color: red;
-  background-color: red;
+  border-color: black;
+  background-color: black;
   color: #fff;
 }
 
