--- a/web/manage/css/sb-admin-2.css
+++ b/web/manage/css/sb-admin-2.css
@@ -2363,14 +2363,14 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #2e59d9;
-  border-color: #2653d4;
+  background-color: #f5b8c5;
+  border-color: #f5b8c5;
 }
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #2e59d9;
-  border-color: #2653d4;
+  background-color: #f5b8c5;
+  border-color: #f5b8c5;
   box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
 }
 
@@ -2383,7 +2383,7 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #2653d4;
+  background-color: #f5b8c5;
   border-color: #244ec9;
 }
 
@@ -4884,7 +4884,7 @@ a.badge:hover, a.badge:focus {
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #2653d4;
+  background-color: #f5b8c5;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
@@ -6417,7 +6417,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #2653d4 !important;
+  background-color: #f5b8c5 !important;
 }
 
 .bg-secondary {
